# tikdog

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tgtok/: storage.py  structures.py  telegram.py  tiktok.py  watchdog.py
tikdog/: __init__.py  storage.py  structures.py  telegram.py  tiktok.py  watchdog.py
